@@ -2,6 +2,7 @@ Mantis ChangeLog
 
 2004.xx.xx  -  0.18.2
 
+ * Fix #1479: Users receive foreign-language e-mail. Now it is used default language for all e-mails.
  * Sec #3595: bug_view_page.php: restricted custom fields are shown.
  * Sec #3596: print_bugnote_inc.php: private bugnotes are visible for not granted users (thanks to yarik123).
  * Enh #1088: formatting of text in bugnotes, description areas.
